--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/core": "^8.1.2",
     "core-js": "^3.6.5",
     "sweetalert2": "^11.4.4",
     "uuid": "^8.3.2",
